fix: misalignment issue with `#left-nav-panel`

--- a/src/css/mobile-styles.css
+++ b/src/css/mobile-styles.css
@@ -93,7 +93,9 @@
     }
 
     #Backgrounds.drawer-content.openDrawer.bg-drawer-layout {
+        width: 100vw;
         width: 100dvw;
+        max-width: 100vw;
         max-width: 100dvw;
     }
 
@@ -188,6 +190,7 @@
 
     .drawer-content {
         min-width: unset;
+        width: 100vw;
         width: 100dvw;
         max-height: calc(100vh - 45px);
         max-height: calc(100dvh - 45px);
@@ -238,8 +241,10 @@
     #sheld,
     #character_popup,
     .drawer-content {
+        width: 100vw !important;
         width: 100dvw !important;
         margin: 0 auto;
+        max-width: 100vw;
         max-width: 100dvw;
         left: 0 !important;
         resize: none !important;
@@ -278,6 +283,7 @@
     #send_form {
         border: 1px solid var(--SmartThemeBorderColor);
         backdrop-filter: blur(calc(var(--SmartThemeBlurStrength) * 2));
+        max-width: 100vw;
         max-width: 100dvw;
     }
 
@@ -320,8 +326,11 @@
         /* 100vh are fallback units for browsers that don't support dvh */
         height: calc(100vh - 45px);
         height: calc(100dvh - 45px);
+        min-width: 100vw !important;
         min-width: 100dvw !important;
+        width: 100vw !important;
         width: 100dvw !important;
+        max-width: 100vw !important;
         max-width: 100dvw !important;
         overflow-y: hidden;
         border-left: 1px solid var(--SmartThemeBorderColor);
